<resources>
    <string name="app_name">MyFitnessTrainer</string>
    <string name="auth_account_type">org.fitness.myfitnesstrainer.auth</string>
    <string name="auth_account_label">My Fitness Trainer</string>
    <string name="activity_dashboard">Profile</string>
    <string name="activity_history">History</string>
    <string name="activity_workout">Workout</string>
    <string name="activity_progress">Progress</string>
    <string name="activity_exercise">Exercises</string>
    <string name="fragment_about_title">About</string>
    <string name="about">This is the About fragment page. App was created by Max. Version 1.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_jc_test">JcTest</string>
    <string name="title_activity_jc_login">JcLogin</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile">profile</string>
</resources>